--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,12 @@
 			<version>0.5.0</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.abstractj.kalium</groupId>
+			<artifactId>kalium</artifactId>
+			<version>0.7.0</version>
+			<scope>compile</scope>
+		</dependency>
 
 	</dependencies>
 
