Add support for EcdsaKoblitzSignature2016

--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,12 @@
 			<version>0.7.0</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.bitcoinj</groupId>
+			<artifactId>bitcoinj-core</artifactId>
+			<version>0.14.5</version>
+			<scope>compile</scope>
+		</dependency>
 
 	</dependencies>
 
