--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,12 @@
 			<version>0.14.5</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.hyperledger</groupId>
+			<artifactId>indy</artifactId>
+			<version>1.4.0</version>
+			<scope>compile</scope>
+		</dependency>
 
 	</dependencies>
 
