Continue with 0.2-SNAPSHOT.
Signed-off-by: Markus Sabadello <markus@danubetech.com>

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>info.weboftrust</groupId>
 	<artifactId>ld-signatures-java</artifactId>
 	<packaging>jar</packaging>
-	<version>0.1</version>
+	<version>0.2-SNAPSHOT</version>
 	<name>ld-signatures-java</name>
 
 	<issueManagement>
