--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,7 @@
 			<artifactId>indy</artifactId>
 			<version>1.12.0</version>
 			<scope>compile</scope>
+			<optional>true</optional>
 		</dependency>
 
 	</dependencies>
