Job is running on every push

--- a/.github/workflows/ld-signatures-java-ws.yml
+++ b/.github/workflows/ld-signatures-java-ws.yml
@@ -1,12 +1,6 @@
 name: CI/CD Workflow for ld-signatures-java
 
-on:
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
+on: [push]
 
 jobs:
   build:
