--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>info.weboftrust</groupId>
 	<artifactId>ld-signatures-java</artifactId>
 	<packaging>jar</packaging>
-	<version>0.2-SNAPSHOT</version>
+	<version>0.2.0-SNAPSHOT</version>
 	<name>ld-signatures-java</name>
 
 	<issueManagement>
@@ -19,6 +19,13 @@
 		<connection>scm:git:git://github.com/WebOfTrustInfo/ld-signatures-java.git</connection>
 		<developerConnection>scm:git:git@github.com:WebOfTrustInfo/ld-signatures-java.git</developerConnection>
 	</scm>
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub WebOfTrustInfo ld-signatures-java</name>
+			<url>https://maven.pkg.github.com/WebOfTrustInfo/ld-signatures-java</url>
+		</repository>
+	</distributionManagement>
 
 	<repositories>
 		<repository>
@@ -80,6 +87,23 @@
 				<configuration>
 					<includeScope>runtime</includeScope>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>3.0.0-M1</version>
+				<configuration>
+					<tagNameFormat>v@{project.version}</tagNameFormat>
+					<scmReleaseCommitComment>Latest Release @{releaseLabel}</scmReleaseCommitComment>
+					<pomFileName>pom.xml</pomFileName>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-scm-plugin</artifactId>
+						<version>1.8.1</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 
