--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
 		<dependency>
 			<groupId>com.github.jsonld-java</groupId>
 			<artifactId>jsonld-java</artifactId>
-			<version>0.13.1-SNAPSHOT</version>
+			<version>0.12.3</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
