--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,7 @@
 		<url>https://github.com/WebOfTrustInfo/ld-signatures-java/issues</url>
 		<system>GitHub Issues</system>
 	</issueManagement>
-
-	<scm>
-		<url>https://github.com/WebOfTrustInfo/ld-signatures-java</url>
-		<connection>scm:git:git://github.com/WebOfTrustInfo/ld-signatures-java.git</connection>
-		<developerConnection>scm:git:git@github.com:WebOfTrustInfo/ld-signatures-java.git</developerConnection>
-	  <tag>HEAD</tag>
-  </scm>
+	
 	<distributionManagement>
 		<repository>
 			<id>github</id>
@@ -25,6 +19,12 @@
 			<url>https://maven.pkg.github.com/WebOfTrustInfo/ld-signatures-java</url>
 		</repository>
 	</distributionManagement>
+
+	<scm>
+		<url>https://github.com/WebOfTrustInfo/ld-signatures-java</url>
+		<connection>scm:git:git://github.com/WebOfTrustInfo/ld-signatures-java.git</connection>
+		<developerConnection>scm:git:git@github.com:WebOfTrustInfo/ld-signatures-java.git</developerConnection>
+	</scm>
 
 	<repositories>
 		<repository>
@@ -87,23 +87,6 @@
 					<includeScope>runtime</includeScope>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-				<version>3.0.0-M1</version>
-				<configuration>
-					<tagNameFormat>v@{project.version}</tagNameFormat>
-					<scmReleaseCommitComment>Latest Release @{releaseLabel}</scmReleaseCommitComment>
-					<pomFileName>pom.xml</pomFileName>
-				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-scm-plugin</artifactId>
-						<version>1.8.1</version>
-					</dependency>
-				</dependencies>
-			</plugin>
 		</plugins>
 
 	</build>
@@ -121,9 +104,27 @@
 	<dependencies>
 
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.10</version>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>5.6.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>5.6.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>3.2.4</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-junit-jupiter</artifactId>
+			<version>3.2.4</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -135,7 +136,7 @@
 		<dependency>
 			<groupId>com.nimbusds</groupId>
 			<artifactId>nimbus-jose-jwt</artifactId>
-			<version>8.2.1</version>
+			<version>8.11</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
