--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>info.weboftrust</groupId>
 	<artifactId>ld-signatures-java</artifactId>
 	<packaging>jar</packaging>
-	<version>0.2.1</version>
+	<version>0.2.1-SNAPSHOT</version>
 	<name>ld-signatures-java</name>
 
 	<issueManagement>
@@ -24,8 +24,7 @@
 		<url>https://github.com/WebOfTrustInfo/ld-signatures-java</url>
 		<connection>scm:git:git://github.com/WebOfTrustInfo/ld-signatures-java.git</connection>
 		<developerConnection>scm:git:git@github.com:WebOfTrustInfo/ld-signatures-java.git</developerConnection>
-	  <tag>ld-signatures-java-0.2.1</tag>
-  </scm>
+	</scm>
 
 	<repositories>
 		<repository>
