--- a/pom.xml
+++ b/pom.xml
@@ -11,21 +11,17 @@
 		<url>https://github.com/WebOfTrustInfo/ld-signatures-java/issues</url>
 		<system>GitHub Issues</system>
 	</issueManagement>
-	
+
 	<distributionManagement>
+		<snapshotRepository>
+			<id>danubetech-maven-snapshots</id>
+			<url>https://repo.danubetech.com/repository/maven-snapshots/</url>
+		</snapshotRepository>
 		<repository>
-			<id>github</id>
-			<name>GitHub WebOfTrustInfo ld-signatures-java</name>
-			<url>https://maven.pkg.github.com/WebOfTrustInfo/ld-signatures-java</url>
+			<id>danubetech-maven-releases</id>
+			<url>https://repo.danubetech.com/repository/maven-releases/</url>
 		</repository>
 	</distributionManagement>
-
-	<scm>
-		<url>https://github.com/WebOfTrustInfo/ld-signatures-java</url>
-		<connection>scm:git:git://github.com/WebOfTrustInfo/ld-signatures-java.git</connection>
-		<developerConnection>scm:git:git@github.com:WebOfTrustInfo/ld-signatures-java.git</developerConnection>
-	  <tag>HEAD</tag>
-  </scm>
 
 	<repositories>
 		<repository>
