--- a/pom.xml
+++ b/pom.xml
@@ -142,31 +142,26 @@
 			<groupId>com.nimbusds</groupId>
 			<artifactId>nimbus-jose-jwt</artifactId>
 			<version>8.14.1</version>
-			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.abstractj.kalium</groupId>
 			<artifactId>kalium</artifactId>
 			<version>0.8.0</version>
-			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.bitcoinj</groupId>
 			<artifactId>bitcoinj-core</artifactId>
 			<version>0.15.8</version>
-			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.bitcoinj</groupId>
-			<artifactId>bitcoinj-core</artifactId>
-			<version>0.15.8</version>
-			<scope>compile</scope>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.15</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hyperledger</groupId>
 			<artifactId>indy</artifactId>
 			<version>1.14.0</version>
-			<scope>compile</scope>
 			<optional>true</optional>
 		</dependency>
 	</dependencies>
