feat: Optional support for Google Tink.
Signed-off-by: Markus Sabadello <markus@danubetech.com>

--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,12 @@
 			<version>1.14.0</version>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>com.google.crypto.tink</groupId>
+			<artifactId>tink</artifactId>
+			<version>1.4.0</version>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 </project>
