--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,12 @@
 			<version>1.5.0</version>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>com.github.mattrglobal</groupId>
+			<artifactId>bbs.signatures</artifactId>
+			<version>1.5-SNAPSHOT</version>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 </project>
