--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,11 @@
 			<version>0.4-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>io.github.erdtman</groupId>
+			<artifactId>java-json-canonicalization</artifactId>
+			<version>1.1</version>
+		</dependency>
+		<dependency>
 			<groupId>com.nimbusds</groupId>
 			<artifactId>nimbus-jose-jwt</artifactId>
 			<version>9.9</version>
