--- a/pom.xml
+++ b/pom.xml
@@ -153,7 +153,7 @@
 		<dependency>
 			<groupId>com.danubetech</groupId>
 			<artifactId>key-formats-java</artifactId>
-			<version>1.0.0</version>
+			<version>1.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>io.github.erdtman</groupId>
